cmake_minimum_required(VERSION 2.8)

PROJECT(usbwriter)

IF (NOT WIN32)
    MESSAGE(FATAL_ERROR "platform unsupported") 
ENDIF (NOT WIN32)

ADD_DEFINITIONS(-DUSE_USBWRITER)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

FILE(GLOB_RECURSE USBWRITER_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
${CMAKE_CURRENT_SOURCE_DIR}/src/*.rc
)

ADD_EXECUTABLE(usbwriter ${USBWRITER_SOURCES})

SET_TARGET_PROPERTIES (usbwriter PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows")
